<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">openlibraryapp</string>
    <string name="category1">Trending Books</string>
    <string name="category2">Classic Books</string>
    <string name="category3">History Books</string>
    <string name="category4">Magic Books</string>

    <string name="title1">Rowan of Rin</string>
    <string name="title2">The Faerie Qveene</string>
    <string name="title3">Shanna</string>
    <string name="title4">Wolf Tower</string>
    <string name="title5">The hobbit</string>
    <string name="title6">The Lord of the Rings</string>
    <string name="title7">Game of Thrones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="h1">Open Library</string>
    <string name="link_vison">Vision</string>
    <string name="link_volunteer">Volunteer</string>
    <string name="link_partner_with_us">Partner With Us</string>
    <string name="link_careers">Careers</string>
    <string name="link_blog">Blog</string>
    <string name="link_terms_of_service">Terms of Service</string>
    <string name="link_donate">Donate</string>
    <string name="h2">Discover</string>
    <string name="link_home">Home</string>
    <string name="link_books">Books</string>
    <string name="link_authors">Authors</string>
    <string name="link_subjects">Subjects</string>
    <string name="link_collections">Collections</string>
    <string name="link_advanced_search">Advanced Search</string>
    <string name="link_return_to_top">Return to Top</string>
    <string name="h3">Develop</string>
    <string name="link_developer_center">Developer Center</string>
    <string name="link_api_documentation">API Documentation</string>
    <string name="link_bulk_data_dumps">Bulk Data Dumps</string>
    <string name="link_writing_bots">Writing Bots</string>
    <string name="h4">Help</string>
    <string name="link_help_center">Help Center</string>
    <string name="link_contact_us">Contact Us</string>
    <string name="link_suggesting_edits">Suggesting Edits</string>
    <string name="link_add_a_book">Add a Book</string>
    <string name="link_release_notes">Release Notes</string>
    <string name="h5">Languages</string>
    <string name="link_english">English</string>
    <string name="link_deutsch">Deutsch</string>
    <string name="link_espa_ol">Español</string>
    <string name="link_fran_ais">Français</string>
    <string name="link_italiano">Italiano</string>
    <string name="link_chinese">中文</string>
    <string name="link_japanese">日本語</string>
    <string name="note">Open Library is an initiative of the Internet Archive, a 501(c)(3) non-profit, building a digital library of Internet sites and other cultural artifacts in digital form.</string>
    <!-- ... your existing strings ... -->

    <!-- "About the Project" Section -->
    <string name="about_project_title">About the Project</string>
    <string name="about_project_para1">Open Library is an open, editable library catalog, building towards a web page for every book ever published.<a href="https://openlibrary.org/about">More</a> </string>
    <string name="about_project_para2">Just like Wikipedia, you can contribute new information or corrections to the catalog. You can browse by <a href="https://openlibrary.org/subjects">subjects</a>, <a href="https://openlibrary.org/authors">authors</a> or <a href="https://openlibrary.org/lists">lists</a> members have created. If you love books, why not help build a library?
    </string>

    <!-- Latest Blog Posts -->
    <string name="latest_blog_posts_title">
        <a href="https://blog.openlibrary.org/">Latest Blog Posts</a>
    </string>
    <string name="blog_post_1">
        <a href="https://blog.openlibrary.org/2025/09/26/save-the-date-2025-open-library-community-celebration/">Save the Date: 2025 Open Library Community Celebration</a> - 26 September 2025
    </string>
    <string name="blog_post_2">
        <a href="https://blog.openlibrary.org/2025/09/12/open-library-search-balancing-high-impact-with-high-demand/">Open Library Search: Balancing High-Impact with High-Demand</a> - 12 September 2025
    </string>
    <string name="blog_post_3">
        <a href="https://blog.openlibrary.org/2025/08/31/sandy-chu-my-internship-at-the-internet-archive/">Sandy Chu: My Internship at the Internet Archive</a> - 31 August 2025
    </string>

    <!-- <string name="latest_blog_posts_title">
        <![CDATA[<a href="https://blog.openlibrary.org/">Latest Blog Posts</a>]]></string> -->

    <!-- <string name="blog_post_1">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/09/26/save-the-date-2025-open-library-community-celebration/">Save the Date: 2025 Open Library Community Celebration</a> - 26 September 2025]]></string> -->

    <!-- <string name="blog_post_2">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/09/12/open-library-search-balancing-high-impact-with-high-demand/">Open Library Search: Balancing High-Impact with High-Demand</a> - 12 September 2025]]></string> -->

    <!-- <string name="blog_post_3">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/08/31/sandy-chu-my-internship-at-the-internet-archive/">Sandy Chu: My Internship at the Internet Archive</a> - 31 August 2025]]></string> -->


    <!-- <string name="about_project_para1">
        <![CDATA[Open Library is an open, editable library catalog, building towards a web page for every book ever published. <a href="https://openlibrary.org/about">More</a>]]></string> -->

    <!-- <string name="about_project_para2">
        <![CDATA[Just like Wikipedia, you can contribute new information or corrections to the catalog. You can browse by <a href="https://openlibrary.org/subjects">subjects</a>, <a href="https://openlibrary.org/authors">authors</a> or <a href="https://openlibrary.org/lists">lists</a> members have created. If you love books, why not help build a library?]]></string> -->


    <!-- <string name="latest_blog_posts_title">
        <![CDATA[<a href="https://blog.openlibrary.org/">Latest Blog Posts</a>]]></string> -->

    <!-- <string name="blog_post_1">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/09/26/save-the-date-2025-open-library-community-celebration/">Save the Date: 2025 Open Library Community Celebration</a> - 26 September 2025]]></string> -->

    <!-- <string name="blog_post_2">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/09/12/open-library-search-balancing-high-impact-with-high-demand/">Open Library Search: Balancing High-Impact with High-Demand</a> - 12 September 2025]]></string> -->

    <!-- <string name="blog_post_3">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/08/31/sandy-chu-my-internship-at-the-internet-archive/">Sandy Chu: My Internship at the Internet Archive</a> - 31 August 2025]]></string> -->


    <!-- <string name="about_project_para1">
        <![CDATA[Open Library is an open, editable library catalog, building towards a web page for every book ever published. <a href="https://openlibrary.org/about">More</a>]]></string> -->

    <!-- <string name="about_project_para2">
        <![CDATA[Just like Wikipedia, you can contribute new information or corrections to the catalog. You can browse by <a href="https://openlibrary.org/subjects">subjects</a>, <a href="https://openlibrary.org/authors">authors</a> or <a href="https://openlibrary.org/lists">lists</a> members have created. If you love books, why not help build a library?]]></string> -->


    <!-- <string name="latest_blog_posts_title">
        <![CDATA[<a href="https://blog.openlibrary.org/">Latest Blog Posts</a>]]></string> -->

    <!-- <string name="blog_post_1">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/09/26/save-the-date-2025-open-library-community-celebration/">Save the Date: 2025 Open Library Community Celebration</a> - 26 September 2025]]></string> -->

    <!-- <string name="blog_post_2">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/09/12/open-library-search-balancing-high-impact-with-high-demand/">Open Library Search: Balancing High-Impact with High-Demand</a> - 12 September 2025]]></string> -->

    <!-- <string name="blog_post_3">
        <![CDATA[<a href="https://blog.openlibrary.org/2025/08/31/sandy-chu-my-internship-at-the-internet-archive/">Sandy Chu: My Internship at the Internet Archive</a> - 31 August 2025]]></string> -->
</resources>