<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2E7C9"
    android:padding="16dp"
    android:fillViewport="true"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/h1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>

        <TextView android:text="@string/link_vison" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_volunteer" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_partner_with_us" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_careers" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_blog" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_terms_of_service" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_donate" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/h2"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>

        <TextView android:text="@string/link_home" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_books" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_authors" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_subjects" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_collections" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_advanced_search" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_return_to_top" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Develop -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/h3"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>

        <TextView android:text="@string/link_developer_center" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_api_documentation" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_bulk_data_dumps" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_writing_bots" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/h4"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>

        <TextView android:text="@string/link_help_center" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_contact_us" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_suggesting_edits" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_add_a_book" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_release_notes" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/h5"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp"/>

        <TextView android:text="@string/link_english" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_deutsch" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_espa_ol" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_fran_ais" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_italiano" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_chinese" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:text="@string/link_japanese" style="@style/FooterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/note"
            android:textSize="12sp"
            android:textColor="#666"/>

    </LinearLayout>
</ScrollView>
